# LIMS-Ai

./: .env.local.example  .gitignore  README.md  analysis_results.md  package-lock.json  package.json
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
app/approvals/: approvals.css  page.tsx
app/billing/: billing.css  page.tsx
app/collection/: collection.css  page.tsx
app/components/: app-shell.tsx  chatbot.css  chatbot.tsx  error-boundary.tsx  icons.tsx  skeletons.tsx
app/dashboard/: page.tsx  (+1 more)
backend/: .env.example  README.md  alembic.ini  init_sample_data.py  pyproject.toml  requirements.txt  run.py  test_security.py
backend/alembic/: env.py
backend/alembic/versions/: README.md
backend/app/: main.py
backend/app/api/: contracts.py
backend/app/api/routes/: auth.py  billing.py  catalog.py  dashboard.py  patients.py  reference_ranges.py  reports.py  results.py  search.py  specimens.py
backend/app/core/: auth_deps.py  config.py  realtime_events.py
backend/app/db/: init_db.py  session.py  test_reference_data.py
backend/app/domain/: entities.py
backend/app/models/: __init__.py  models.py
backend/app/services/: approval_service.py  audit_service.py  auth_service.py  billing_service.py  catalog_service.py  dashboard_service.py  flag_evaluation_service.py  mail_service.py  patient_service.py  razorpay_service.py  report_generation_service.py  report_pdf_service.py  reports_service.py  result_service.py  search_service.py  specimen_service.py
backend/docs/: backend-design.md
backend/schema/: 001_init.sql
scripts/: run-dev.ps1
(+25 files in other folders)
