[project]
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 140

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function-call-in-default-argument (FastAPI Depends/Query/Field pattern)
    "E712",   # true-false-comparison (SQLAlchemy requires `== False` not `is False`)
    "UP042",  # replace-str-enum (StrEnum migration deferred)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"init_sample_data.py" = ["E402"]  # sys.path manipulation requires late imports
"run.py" = ["F401"]               # sys imported for potential future use
